test/errors/python_generator_error/zs/scope_symbols/enum_item_pascal_case_clash_error.zs
package scope_symbols.enum_item_pascal_case_clash_error;

enum uint8 DarkColorClash
{
    NONE       = 000b,
    DARK_RED   = 001b,
    DARK_BLUE  = 010b,
    DARK_GREEN = 111b,
    DarkGreen
};
